--- a/GroupMeetingBookingSystem/src/main/resources/application.properties
+++ b/GroupMeetingBookingSystem/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.data.mongodb.password=rootpass
 spring.data.mongodb.database=groupmeetingsystem
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
+spring.main.allow-bean-definition-overriding=true
+spring.main.allow-circular-references = true
 
